--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.0"
     defaultConfig {
-        applicationId "de.tenminuteapps.letseat"
+        applicationId "org.seniorlaguna.letseat"
         minSdkVersion 14
         targetSdkVersion 26
         versionCode 2
